--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 <p>Mango is a complete ChIA-PET data analysis pipeline that provides statistical confidence estimates for DNA-DNA interactions and corrects for major sources of bias including differential peak enrichment and genomic proximity. </p>
 
 
+<h2 id="need-help-with-troubleshooting">Need help with troubleshooting?</h2>
+
+<ul>
+<li>FAQ (coming soon)</a></li>
+</ul>
+
+
 <h2 id="references">References</h2>
 
 <h6 id="the-original-publication-please-cite-when-using-Mango">The original publication - please cite when using Mango:</h6>
