--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
 <p>Mango is a complete ChIA-PET data analysis pipeline that provides statistical confidence estimates for DNA-DNA interactions and corrects for major sources of bias including differential peak enrichment and genomic proximity. </p>
 
 
+<h2 id="What-does-Mango-do">What does Mango do?</h2>
+
+<p>Mango processes ChIA-PET sequencing data (in fastq format) and determines statistically significant DNA-DNA interactions (loops) between pairs of genomic loci bound by the target protein.  Mang performs the following five steps which can run all at once or one at a time</p>
+
+<ul>
+<li> linker parsing </li>
+<li> PET alignment </li>
+<li> PET filtering </li>
+<li> peak calling </li>
+<li> statistical estimate of interaction </li>
+</ul>
+
+
+
 <h2 id="need-help-with-troubleshooting">Need help with troubleshooting?</h2>
 
 <ul>
-<li>FAQ (coming soon)</a></li>
+<li>FAQ (coming soon)</li>
 </ul>
 
 
