--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 <p>Mango processes ChIA-PET sequencing data (in fastq format) and determines statistically significant DNA-DNA interactions (loops) between pairs of genomic loci bound by the target protein.  Mang performs the following five steps which can run all at once or one at a time</p>
 
 <ul>
-<li> Linker parsing: finds and removes linker sequences </li>
-<li> Read alignment: aligns reads to the genome using <a href="http://bowtie-bio.sourceforge.net/index.shtml">bowtie </a></li>
-<li> PET filtering: removes reads potential due to PCR duplication and organizes reads into bedpe format </li>
-<li> Peak calling </li>
-<li> Interaction calling </li>
+<li> <b>Linker parsing:</b> finds and removes linker sequences </li>
+<li> <b>Read alignment:</b>  aligns reads to the genome using <a href="http://bowtie-bio.sourceforge.net/index.shtml">bowtie </a></li>
+<li> <b>PET filtering:</b>  removes reads potential due to PCR duplication and organizes reads into bedpe format </li>
+<li> <b>Peak calling:</b>  </li>
+<li> <b>Interaction calling:</b>  </li>
 </ul>
 
 
