--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 <ul>
 <li> <b>Linker parsing:</b> finds and removes linker sequences </li>
-<li> <b>Read alignment:</b>  aligns reads to the genome using <a href="http://bowtie-bio.sourceforge.net/index.shtml">bowtie </a></li>
-<li> <b>PET filtering:</b>  removes reads potential due to PCR duplication and organizes reads into bedpe format </li>
-<li> <b>Peak calling:</b>  </li>
+<li> <b>Read alignment:</b> aligns reads to the genome using <a href="http://bowtie-bio.sourceforge.net/index.shtml">bowtie </a></li>
+<li> <b>PET filtering:</b> removes reads potential due to PCR duplication and organizes reads into bedpe format </li>
+<li> <b>Peak calling:</b> calls DNA binding peaks using <a href="https://github.com/taoliu/MACS">MACS2</a></li>
 <li> <b>Interaction calling:</b>  </li>
 </ul>
 
