--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
 <h2 id="What-does-Mango-do">What does Mango do?</h2>
 
-<p>Mango processes ChIA-PET sequencing data (in fastq format) and determines statistically significant DNA-DNA interactions (loops) between pairs of genomic loci bound by the target protein.  Mang performs the following five steps which can run all at once or one at a time</p>
+<p>Mango processes ChIA-PET sequencing data (in fastq format) and determines statistically significant DNA-DNA interactions (loops) between pairs of genomic loci bound by the target protein.  Mango performs the following five steps which can run all at once or one at a time:</p>
 
 <ul>
-<li> <b>Linker parsing:</b> finds and removes linker sequences </li>
-<li> <b>Read alignment:</b> aligns reads to the genome using <a href="http://bowtie-bio.sourceforge.net/index.shtml">bowtie </a></li>
-<li> <b>PET filtering:</b> removes reads potential due to PCR duplication and organizes reads into bedpe format </li>
-<li> <b>Peak calling:</b> calls DNA binding peaks using <a href="https://github.com/taoliu/MACS">MACS2</a></li>
-<li> <b>Interaction calling:</b>  </li>
+<li> <strong>Linker parsing:</strong> finds and removes linker sequences </li>
+<li> <strong>Read alignment:</strong> aligns reads to the genome using <a href="http://bowtie-bio.sourceforge.net/index.shtml">bowtie </a></li>
+<li> <strong>PET filtering:</strong> removes reads potential due to PCR duplication and organizes reads into bedpe format </li>
+<li> <strong>Peak calling:</strong> calls DNA binding peaks using <a href="https://github.com/taoliu/MACS">MACS2</a></li>
+<li> <strong>Interaction calling:</strong>  </li>
 </ul>
 
 
