--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
               <a class="zip_download_link" href="https://github.com/dphansti/mango/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/dphansti/mango/tarball/master">Download this project as a tar.gz file</a>
             </section>
+            
+              <ul class="nav">
+      			<li><a href="https://github.com/dphansti/mango/wiki">Wiki</a></li>
+
+              </ul>
+	      <br >
+            
         </header>
     </div>
 
