--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
               <a class="zip_download_link" href="https://github.com/dphansti/mango/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/dphansti/mango/tarball/master">Download this project as a tar.gz file</a>
             </section>
-              <ul class="nav"><li><a href="https://github.com/dphansti/mango/wiki">Wiki</a></li>
-              </ul>
         </header>
     </div>
 
@@ -58,6 +56,7 @@
 
 <ul>
 <li>FAQ (coming soon)</li>
+<li>read the  <a href="https://github.com/dphansti/mango/wiki">Wiki</li>
 </ul>
 
 
