--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <ul>
 <li>FAQ (coming soon)</li>
-<li>read the  <a href="https://github.com/dphansti/mango/wiki">Wiki</li>
+<li>read the  <a href="https://github.com/dphansti/mango/wiki">Wiki</a></li>
 </ul>
 
 
